@@ -207,7 +207,7 @@ class CristinEntryEventConsumerTest extends AbstractCristinImportTest {
         var eventBody = createEventBody(cristinObject);
         var sqsEvent = createSqsEvent(eventBody);
         var actualPublications = handler.handleRequest(sqsEvent, CONTEXT);
-        var actualPublication = actualPublications.get(0);
+        var actualPublication = actualPublications.getFirst();
 
         var expectedPublication = mapToPublication(cristinObject);
         injectValuesThatAreCreatedWhenSavingInDynamo(actualPublication, expectedPublication);
@@ -222,7 +222,7 @@ class CristinEntryEventConsumerTest extends AbstractCristinImportTest {
         var eventBody = createEventBody(cristinObject);
         var sqsEvent = createSqsEvent(eventBody);
         var publications = handler.handleRequest(sqsEvent, CONTEXT);
-        var actualPublication = publications.get(0);
+        var actualPublication = publications.getFirst();
         var expectedFileNameStoredInS3 = actualPublication.getIdentifier().toString();
 
         var expectedTimestamp = eventBody.getTimestamp();
@@ -508,16 +508,16 @@ class CristinEntryEventConsumerTest extends AbstractCristinImportTest {
         var sqsEvent = createSqsEvent(eventBody);
 
         var publications = handler.handleRequest(sqsEvent, CONTEXT);
-        assertThat(publications.get(0), notNullValue());
+        assertThat(publications.getFirst(), notNullValue());
     }
 
     @Test
-    void shouldBeAbleToParseCristinTags() throws IOException {
+    void shouldBeAbleToParseCristinTagsAndRemoveDuplicates() throws IOException {
         var cristinObjectWithTags = CristinDataGenerator.objectWithTags();
         var eventBody = createEventBody(cristinObjectWithTags);
         var sqsEvent = createSqsEvent(eventBody);
         var publications = handler.handleRequest(sqsEvent, CONTEXT);
-        assertThat(publications.get(0), notNullValue());
+        assertThat(publications.getFirst().getEntityDescription().getTags(), hasSize(1));
     }
 
     @Test
@@ -527,7 +527,7 @@ class CristinEntryEventConsumerTest extends AbstractCristinImportTest {
         var eventBody = createEventBody(cristinObjectWithCristinHrcsCategoriesAndActivities);
         var sqsEvent = createSqsEvent(eventBody);
         var publications = handler.handleRequest(sqsEvent, CONTEXT);
-        assertThat(publications.get(0), notNullValue());
+        assertThat(publications.getFirst(), notNullValue());
     }
 
     @Test
@@ -542,7 +542,7 @@ class CristinEntryEventConsumerTest extends AbstractCristinImportTest {
         var sqsEvent = createSqsEvent(eventBody);
         var publications = handler.handleRequest(sqsEvent, CONTEXT);
 
-        var actualPublication = publications.get(0);
+        var actualPublication = publications.getFirst();
         var expectedFileNameStoredInS3 = actualPublication.getIdentifier().toString();
         var expectedPartOFCristinPublication = NvaPublicationPartOfCristinPublication.builder()
                                                    .withPartOf(NvaPublicationPartOf.builder()
@@ -671,7 +671,7 @@ class CristinEntryEventConsumerTest extends AbstractCristinImportTest {
         var eventBody = createEventBody(cristinObject);
         var sqsEvent = createSqsEvent(eventBody);
         var publications = handler.handleRequest(sqsEvent, CONTEXT);
-        assertThat(publications.get(0), notNullValue());
+        assertThat(publications.getFirst(), notNullValue());
     }
 
     @Test
@@ -836,7 +836,7 @@ class CristinEntryEventConsumerTest extends AbstractCristinImportTest {
         var sqsEvent = createSqsEvent(eventBody);
         var publications = handler.handleRequest(sqsEvent, CONTEXT);
 
-        var pages = ((JournalArticle) publications.get(0).getEntityDescription().getReference()
+        var pages = ((JournalArticle) publications.getFirst().getEntityDescription().getReference()
                                           .getPublicationInstance()).getPages();
 
         assertThat(pages.getBegin(), is(equalTo(pages.getEnd())));
